*****************************************************************************************************
digiKam 5.4.0 - Release date: 2016-12-27

NEW FEATURES:


BUGFIXES FROM BUGZILLA:

001 ==> 366624 - digiKam defaults to fullscreen with no menu and status bar.
002 ==> 372027 - Adjust grouping behavior [patch].
003 ==> 